fix for one row shift in firefox

--- a/static/css/honey.css
+++ b/static/css/honey.css
@@ -5,7 +5,7 @@
   margin-right: 10px;
   position: relative;
   float:left;
-  margin-left: 3%;
+  margin-left: 50px;
 }
 
 #honey_image {
@@ -13,15 +13,15 @@
 }
 
 #positioning_wrapper {
+  margin-left: 30px;
+  width: 90%;
   position: relative;
 }
 
 #content_wrapper {
   display: table;
   border-collapse: collapse;
-  width: 90%;
-  margin-left: 2%;
-  position: relative;
+  width: 100%;
 }
 
 #content {
